@@ -355,20 +355,6 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|tx
-operator|.
-name|TransactionalOperation
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
 name|util
 operator|.
 name|ToStringBuilder
@@ -402,16 +388,6 @@ operator|.
 name|util
 operator|.
 name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
 import|;
 end_import
 
@@ -2226,11 +2202,24 @@ name|DataChannelQueryFilter
 name|filter
 parameter_list|)
 block|{
+comment|// skip double listener registration, if filter already in sync filters list
+if|if
+condition|(
+operator|!
+name|syncFilters
+operator|.
+name|contains
+argument_list|(
+name|filter
+argument_list|)
+condition|)
+block|{
 name|addListener
 argument_list|(
 name|filter
 argument_list|)
 expr_stmt|;
+block|}
 name|queryFilters
 operator|.
 name|add
@@ -2248,11 +2237,24 @@ name|DataChannelSyncFilter
 name|filter
 parameter_list|)
 block|{
+comment|// skip double listener registration, if filter already in query filters list
+if|if
+condition|(
+operator|!
+name|queryFilters
+operator|.
+name|contains
+argument_list|(
+name|filter
+argument_list|)
+condition|)
+block|{
 name|addListener
 argument_list|(
 name|filter
 argument_list|)
 expr_stmt|;
+block|}
 name|syncFilters
 operator|.
 name|add
