@@ -35,7 +35,31 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|DataChannelQueryFilterChain
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|DataChannelSyncFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|DataChannelSyncFilterChain
 import|;
 end_import
 
@@ -60,6 +84,20 @@ operator|.
 name|cayenne
 operator|.
 name|QueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostPersist
 import|;
 end_import
 
@@ -104,6 +142,20 @@ operator|.
 name|graph
 operator|.
 name|GraphDiff
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|query
+operator|.
+name|Query
 import|;
 end_import
 
@@ -888,6 +940,221 @@ argument_list|,
 name|response
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSyncAndQueryFilter
+parameter_list|()
+block|{
+name|ComplexFilter
+name|complexFilter
+init|=
+operator|new
+name|ComplexFilter
+argument_list|()
+decl_stmt|;
+name|DataDomain
+name|domain
+init|=
+name|runtime
+operator|.
+name|getDataDomain
+argument_list|()
+decl_stmt|;
+name|domain
+operator|.
+name|addQueryFilter
+argument_list|(
+name|complexFilter
+argument_list|)
+expr_stmt|;
+name|domain
+operator|.
+name|addSyncFilter
+argument_list|(
+name|complexFilter
+argument_list|)
+expr_stmt|;
+name|Artist
+name|a
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|a
+operator|.
+name|setArtistName
+argument_list|(
+literal|"AAA"
+argument_list|)
+expr_stmt|;
+comment|// testing domain.onSync indirectly
+name|context
+operator|.
+name|commitChanges
+argument_list|()
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|complexFilter
+operator|.
+name|results
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"onSync"
+argument_list|,
+name|complexFilter
+operator|.
+name|results
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"postPersist"
+argument_list|,
+name|complexFilter
+operator|.
+name|results
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+specifier|static
+class|class
+name|ComplexFilter
+implements|implements
+name|DataChannelQueryFilter
+implements|,
+name|DataChannelSyncFilter
+block|{
+specifier|private
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|results
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|QueryResponse
+name|onQuery
+parameter_list|(
+name|ObjectContext
+name|originatingContext
+parameter_list|,
+name|Query
+name|query
+parameter_list|,
+name|DataChannelQueryFilterChain
+name|filterChain
+parameter_list|)
+block|{
+name|results
+operator|.
+name|add
+argument_list|(
+literal|"onQuery"
+argument_list|)
+expr_stmt|;
+return|return
+name|filterChain
+operator|.
+name|onQuery
+argument_list|(
+name|originatingContext
+argument_list|,
+name|query
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|GraphDiff
+name|onSync
+parameter_list|(
+name|ObjectContext
+name|originatingContext
+parameter_list|,
+name|GraphDiff
+name|changes
+parameter_list|,
+name|int
+name|syncType
+parameter_list|,
+name|DataChannelSyncFilterChain
+name|filterChain
+parameter_list|)
+block|{
+name|results
+operator|.
+name|add
+argument_list|(
+literal|"onSync"
+argument_list|)
+expr_stmt|;
+return|return
+name|filterChain
+operator|.
+name|onSync
+argument_list|(
+name|originatingContext
+argument_list|,
+name|changes
+argument_list|,
+name|syncType
+argument_list|)
+return|;
+block|}
+annotation|@
+name|PostPersist
+specifier|public
+name|void
+name|postPersist
+parameter_list|(
+name|Object
+name|object
+parameter_list|)
+block|{
+name|results
+operator|.
+name|add
+argument_list|(
+literal|"postPersist"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
